{
    "name": "GameInputActions",
    "maps": [
        {
            "name": "Game",
            "id": "7c6c81f8-05fe-423c-af21-587f62061985",
            "actions": [
                {
                    "name": "Restart",
                    "type": "Button",
                    "id": "e482652f-dafb-4802-96cd-bde1ce1ff1d3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9d6cc866-8413-4205-a1f9-d82781f1f02e",
                    "path": "<Keyboard>/backquote",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}